📸 index.html 수정 및 이미지 파일 추가

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                      <img src="images/SEOUNG.jpg" srcset="images/SEOUNG.jpg 1x, images/SEOUNG@2x.jpg 2x" alt="소개 이미지">
 
 
+
                     </div>
 
                     <div class="column lg-6 md-12">
@@ -243,9 +244,7 @@
     <li class="folio-list__item column" data-animate-el>
     <a class="folio-list__item-link" href="#modal-01">
         <div class="folio-list__item-pic">
-            <img src="images/portfolio/kali.jpg"
-                 srcset="images/portfolio/Kail.jpg 1x, images/portfolio/kali@2x.jpg 2x"
-                 alt="Kali Linux">
+            <img src="images/portfolio/kali.jpg" srcset="images/portfolio/kali.jpg 1x, images/portfolio/kali@2x.jpg 2x"alt="Kali Linux">
         </div>
         <div class="folio-list__item-text">
             <div class="folio-list__item-cat">Linux</div>
