--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="row about-info wide" data-animate-block>
 
                     <div class="column lg-6 md-12 about-info__pic-block">
-                     <img src="images/SEOUNG.jpg" srcset="images/SEOUNG.jpg 1x, images/SEOUNG@2x.jpg 2x" alt="소개 이미지">
+                     <img src="images/seoung.jpg" srcset="images/seoung.jpg 1x, images/SEOUNG@2x.jpg 2x" alt="소개 이미지">
 
 
 
